src/test/fail/return_outside_function.ly
###
SyntaxError: 'return' used outside of a function.
Where: File "test/fail/return_outside_function.ly" at line 6
###

return
